--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -84,21 +84,14 @@ billing = "7.0.0"
 # google play
 googlePlayReview = "2.0.1"
 
-# calendar
-calendarCompose = "2.6.0"
-
-# https://github.com/Kotlin/kotlinx-datetime/releases
-kotlinxDatetime = "0.6.0"
+# room
+room = "2.6.1"
 
 # util
 utilcodex = "1.31.1"
 
 # runner
 runner = "1.6.2"
-
-# beagle
-# https://github.com/pandulapeter/beagle
-beagleVersion = "2.9.6"
 
 # test
 # https://github.com/junit-team/junit4
@@ -117,18 +110,12 @@ profileinstaller = "1.3.1"
 moduleGraph = "2.7.1"
 firebaseConfigKtx = "22.0.0"
 coreKtx = "1.12.0"
-wheelpickercompose = "1.1.11"
-emoji2Emojipicker = "1.5.0"
+roomGradlePlugin = "2.6.1"
 
 
 
 [libraries]
-android-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "android-gradle-plugin" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
-
-# kotlin
-kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 
 # corutines
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
@@ -179,7 +166,6 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
 androidx-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxComposeNavigation" }
-compose-compiler-gradle-plugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" }
 
 # coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
@@ -219,17 +205,15 @@ google-play-review-ktx = { group = "com.google.android.play", name = "review-ktx
 adapty = { group = "io.adapty", name = "android-sdk", version.ref = "adapty" }
 billing = { group = "com.android.billingclient", name = "billing", version.ref = "billing" }
 
-# calendar
-calendar-compose = { group = "com.kizitonwose.calendar", name = "compose", version.ref = "calendarCompose" }
-
-# debug
-beagle-ui-drawer = { module = "io.github.pandulapeter.beagle:ui-drawer", version.ref = "beagleVersion" }
-beagle-noop = { module = "io.github.pandulapeter.beagle:noop", version.ref = "beagleVersion" }
-
 # orbit
 orbit-compose = { module = "org.orbit-mvi:orbit-compose", version.ref = "orbit" }
 orbit-core = { module = "org.orbit-mvi:orbit-core", version.ref = "orbit" }
 orbit-viewmodel = { module = "org.orbit-mvi:orbit-viewmodel", version.ref = "orbit" }
+
+# room
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 # util
 utilcodex = { module = "com.blankj:utilcodex", version.ref = "utilcodex" }
@@ -244,8 +228,14 @@ androidx-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomato
 androidx-benchmark-macro-junit4 = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "benchmarkMacroJunit4" }
 androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "profileinstaller" }
 firebase-config-ktx = { group = "com.google.firebase", name = "firebase-config-ktx", version.ref = "firebaseConfigKtx" }
-wheelpickercompose = { module = "com.github.commandiron:WheelPickerCompose", version.ref = "wheelpickercompose" }
-androidx-emoji2-emojipicker = { group = "androidx.emoji2", name = "emoji2-emojipicker", version.ref = "emoji2Emojipicker" }
+
+# Dependencies of the included build-logic
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "android-gradle-plugin" }
+compose-gradlePlugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" }
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
@@ -266,6 +256,7 @@ firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "
 
 module-graph = { id = "com.jraska.module.graph.assertion", version.ref = "moduleGraph" }
 android-test = { id = "com.android.test", version.ref = "android-gradle-plugin" }
+room = { id = "androidx.room", version.ref = "room" }
 
 # edc plugins
 edc-android-application = { id = "edc.android.application" }
@@ -275,6 +266,7 @@ edc-android-compose = { id = "edc.android.compose" }
 edc-android-hilt = { id = "edc.android.hilt" }
 edc-android-ktor = { id = "edc.android.ktor" }
 edc-android-coil = { id = "edc.android.coil" }
+edc-android-room = { id = "edc.android.room" }
 edc-android-analytics = { id = "edc.android.analytics" }
 edc-android-adapty = { id = "edc.android.adapty" }
 edc-android-feature = { id = "edc.android.feature" }
